Fixes table cell spacing
The cells now take up equal spacing instead of spacing based on content.
The font weight of the table headers has been decreased to normal
(instead of the default bold).

--- a/styles.css
+++ b/styles.css
@@ -127,8 +127,13 @@ table>tfoot:not(:last-child) {
  border-bottom: 1px solid gray;
 }
 
+th{
+    font-weight: normal;
+}
+
 td{
     text-align: center;
+    width: 35%;
 }
 
 
